Ensure `select` elements are not larger than viewport (#2158)
* Ensure `select` elements are not larger than viewport

ol.form `select` elements should be 100% unless otherwise specified
so that they do not spill outside the viewport
(see https://github.com/internetarchive/openlibrary/issues/2100#issuecomment-497307864)

Fixes: #2100

* Suggest 'step' increment for pages and weight

Default step is 1, but we allow decimals for weight so step here
should be 0.1. For pages, explicit request 1 in case there are
browsers which do not provide a default

Fixes: #2095

* Update step size to 0.01

--- a/static/css/components/form.olform.less
+++ b/static/css/components/form.olform.less
@@ -56,6 +56,7 @@
   }
 
   select {
+    width: 100%;
     font-size: 1.125em;
     font-family: @lucida_sans_serif-1;
     padding: 3px;
